about us component created
about us component created

--- a/du_web/src/app/about/about.component.html
+++ b/du_web/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="about_section">
+    <h1 class="heading">About US</h1>
+    <p class="about_description">Design Unity is an Indian company established to take you into a world beyond Venetian Plasters. We’ll help you decorate your homes, offices, and places close to your heart just as you like. Luxury, sophistication, and beauty beyond words are the adjectives that guide our products and services. We wish to convey that Venetian plaster finishes are not the limit; the sky is. We are all set to add colour, design and grace to your imagination.</p>
+</div>
+
+
