--- a/du_web/src/styles.scss
+++ b/du_web/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './assets/scss/variables';
+@import './assets/scss/mixins';
+@import './assets/fonts/font-face';
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Helvetica Neue', sans-serif;
+}
+.text-center{
+    text-align: center;
+}
