flooring component created
flooring component created

--- a/du_web/src/app/flooring/flooring.component.scss
+++ b/du_web/src/app/flooring/flooring.component.scss
@@ -5,7 +5,9 @@
         background-size: cover;
         padding-top: 2em;
         &_details{
-            @include dflex;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
     }
 }
