--- a/du_web/src/assets/scss/_mixins.scss
+++ b/du_web/src/assets/scss/_mixins.scss
@@ -10,5 +10,5 @@
 @mixin dflex($dflex:flex, $justify-content:center) {
     display: $dflex;
     align-items: center;
-    justify-content: justify-content;
+    justify-content: $justify-content;
 }
