flooring component completed design
flooring component completed design

--- a/du_web/src/app/flooring/flooring.component.scss
+++ b/du_web/src/app/flooring/flooring.component.scss
@@ -1,13 +1,40 @@
+@import '../../assets/scss/variables';
+@import '../../assets/scss/mixins';
+@import '../../assets/scss/container';
+
 .flooring {
     &_section{
-        height: 630px;
-        background: #f6f1eb url(../../assets/img/bg.png) no-repeat center center;
+       min-height: 50vh;
+        background: #f6f1eb;
         background-size: cover;
         padding-top: 2em;
-        &_details{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+        padding-bottom: 2rem;
+
+        .heading{
+            @include heading;
+            padding: 2rem 1.5rem 3rem 1rem;;
         }
     }
+    &_details{
+        @include dflex(grid, 50% 50%, center);
+        background: #4f453c;
+        margin: 25px;
+        border-radius: 18px;
+        &_left{
+            padding: 2rem;
+            line-height: 2;
+            font-size: 1.2rem;
+            letter-spacing: 0.9px;
+            color: #fff;
+        }
+        &_right{
+            display: flex;
+            align-items: center;
+            img{
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
+    
 }
