--- a/du_web/src/assets/scss/_mixins.scss
+++ b/du_web/src/assets/scss/_mixins.scss
@@ -7,8 +7,9 @@
     font-weight: 100;
     text-transform: uppercase;
 }
-@mixin dflex($dflex:flex, $justify-content:center) {
+@mixin dflex($dflex:flex, $grid-template-columns:auto, $justify-content:center) {
     display: $dflex;
+    grid-template-columns: $grid-template-columns;
     align-items: center;
     justify-content: $justify-content;
 }
