--- a/du_web/src/app/about/about.component.scss
+++ b/du_web/src/app/about/about.component.scss
@@ -5,7 +5,7 @@
 
 .about {
     &_section{
-        height: 630px;
+        min-height: 40vh;
         background: #f6f1eb url(../../assets/img/bg.png) no-repeat center center;
         background-size: cover;
         padding-top: 2em;
